Success pop-up: fixed wrong font family

--- a/client/src/app/components/sidebar/save-drawing-page/save-complete-page/save-complete-page.component.scss
+++ b/client/src/app/components/sidebar/save-drawing-page/save-complete-page/save-complete-page.component.scss
@@ -4,6 +4,16 @@
     display: flex;
 }
 
+#saveTitle{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-self: center;
+    font-size: x-large;
+    padding-bottom: 25px;
+    font-family: Rubik, serif;
+}
+
 #saveCompleteHeader {
     display: flex;
     justify-content: center;
@@ -37,4 +47,8 @@
 #closebutton:hover {
     color: black;
     background-color: slategrey;
+}
+
+.mat-button{
+  font-family: Rubik, serif;
 }
